[project]
name = "HolisticHealth"
version = "0.1.0"
description = "Healthy habits, healthy rewards."
authors = [
    {name = "Vivek Joshy", email = "8206808+vivekjoshy@users.noreply.github.com"},
    {name = "Namitha Rajesh", email = "147820088+NamithaRajesh@users.noreply.github.com"},
    {name = "Nanditha Rajesh", email = "147820209+NandithaRajesh@users.noreply.github.com"}
]
dependencies = [
    "fastapi~=0.109.2",
    "sqlmodel~=0.0.16",
    "uvicorn[standard]~=0.27.1",
    "dynaconf~=3.2.4",
    "loguru~=0.7.2",
    "sentry-sdk~=1.40.5",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.towncrier]
package = "HolisticHealth"
package_dir = "HolisticHealth"
directory = "changes"
filename = "CHANGELOG.rst"
issue_format = "`#{issue} <https://github.com/HolisticHealthWiki/HolisticHealth/issues/{issue}>`_"
type = [
    { name = "Breaking Changes",            directory = "breaking",     showcontent = true },
    { name = "Deprecation",                 directory = "deprecation",  showcontent = true },
    { name = "Features",                    directory = "feature",      showcontent = true },
    { name = "Bugfixes",                    directory = "bugfix",       showcontent = true },
    { name = "Documentation Improvements",  directory = "doc",          showcontent = true },
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers --ignore=docs/conf.py --ignore=setup.py --ignore=benchmark --ignore=ci --ignore=.eggs --doctest-modules --doctest-glob=/*.py --tb=short"
norecursedirs = [
	".git",
	".tox",
	".env",
	"dist",
	"build",
	"migrations"
]
testpaths = [
    "tests"
]
python_files = [
	"test_*.py",
	"*_test.py",
	"tests.py"
]
doctest_optionflags = "NUMBER"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "dynaconf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "HolisticHealth.config"
ignore_missing_imports = true

[tool.pdm.dev-dependencies]
docs = [
    "sphinx~=7.2",
    "pygments~=2.17",
    "shibuya~=2024.2",
    "ipykernel~=6.29",
    "myst-parser~=2.0",
    "sphinx-intl~=2.1",
    "sphinx-favicon~=1.0",
    "sphinx-copybutton~=0.5",
    "sphinx-autoapi~=3.0",
    "sphinxext-opengraph~=0.9",
    "sphinxcontrib-bibtex~=2.6",
    "sphinx-autodoc-typehints~=2.0",
]
tests = [
    "tox~=4.13",
    "mypy~=1.8",
    "pytest~=8.0",
    "coverage~=7.4",
    "pytest-cov~=4.1",
    "httpx~=0.27"
]
release = [
    "twine~=5.0",
    "build~=1.0",
    "isort~=5.13",
    "black~=24.2",
    "codecov~=2.1",
    "towncrier~=23.11",
    "bump-my-version~=0.17",
]

[tool.pdm.build]
includes = ["HolisticHealth/", "LICENSE", "README.md", "CHANGELOG.rst"]
is-purelib = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"